avro_derive/tests/ui/avro_rs_501_non_basic_enum.stderr
error: AvroSchema: derive does not work for enums with non unit structs
  --> tests/ui/avro_rs_501_non_basic_enum.rs:21:6
   |
21 | enum NonBasic {
   |      ^^^^^^^^
